Update new feature

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
                 <!-- Flower Card 1 -->
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-xl transition fade-in">
-                    <img src="" alt="Classic Rose Bouquet" class="w-full h-64 object-cover">
+                    <img src="img/Classic Rose Bouquet.jpg" alt="Classic Rose Bouquet" class="w-full h-64 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-semibold text-gray-800 mb-2">Classic Rose Bouquet</h3>
                         <p class="text-gray-600 mb-4">Timeless red roses arranged in elegant wrapping</p>
@@ -206,7 +206,7 @@
                 </div>
                 <!-- Flower Card 2 -->
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-xl transition fade-in">
-                    <img src="" alt="Sunflower Delight" class="w-full h-64 object-cover">
+                    <img src="img/Sunflower Delight.jpg" alt="Sunflower Delight" class="w-full h-64 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-semibold text-gray-800 mb-2">Sunflower Delight</h3>
                         <p class="text-gray-600 mb-4">Bright sunflowers to bring sunshine to any room</p>
@@ -220,7 +220,7 @@
                 </div>
                 <!-- Flower Card 3 -->
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-xl transition fade-in">
-                    <img src="" alt="Spring Tulips" class="w-full h-64 object-cover">
+                    <img src="img/Spring Tulips.jpg" alt="Spring Tulips" class="w-full h-64 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-semibold text-gray-800 mb-2">Spring Tulips</h3>
                         <p class="text-gray-600 mb-4">Colorful tulips in a modern glass vase</p>
@@ -234,7 +234,7 @@
                 </div>
                 <!-- Flower Card 4 -->
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-xl transition fade-in">
-                    <img src="" alt="Lily Elegance" class="w-full h-64 object-cover">
+                    <img src="img/Lily Elegance.jpg" alt="Lily Elegance" class="w-full h-64 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-semibold text-gray-800 mb-2">Lily Elegance</h3>
                         <p class="text-gray-600 mb-4">Graceful lilies in a delicate arrangement</p>
@@ -248,7 +248,7 @@
                 </div>
                 <!-- Flower Card 5 -->
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-xl transition fade-in">
-                    <img src="" alt="Orchid Bliss" class="w-full h-64 object-cover">
+                    <img src="img/Orchid Bliss.jpg" alt="Orchid Bliss" class="w-full h-64 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-semibold text-gray-800 mb-2">Orchid Bliss</h3>
                         <p class="text-gray-600 mb-4">Exotic orchids for a touch of luxury</p>
@@ -262,7 +262,7 @@
                 </div>
                 <!-- Flower Card 6 -->
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-xl transition fade-in">
-                    <img src="" alt="Daisy Dream" class="w-full h-64 object-cover">
+                    <img src="img/Daisy Dream.jpg" alt="Daisy Dream" class="w-full h-64 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-semibold text-gray-800 mb-2">Daisy Dream</h3>
                         <p class="text-gray-600 mb-4">Charming daisies in a rustic basket</p>
@@ -276,7 +276,7 @@
                 </div>
                 <!-- Flower Card 7 -->
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-xl transition fade-in">
-                    <img src="" alt="Carnation Charm" class="w-full h-64 object-cover">
+                    <img src="img/Carnation Charm.jpg" alt="Carnation Charm" class="w-full h-64 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-semibold text-gray-800 mb-2">Carnation Charm</h3>
                         <p class="text-gray-600 mb-4">Vibrant carnations for any occasion</p>
@@ -290,7 +290,7 @@
                 </div>
                 <!-- Flower Card 8 -->
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-xl transition fade-in">
-                    <img src="" alt="Mixed Bloom Basket" class="w-full h-64 object-cover">
+                    <img src="img/Mixed Bloom Basket.jpg" alt="Mixed Bloom Basket" class="w-full h-64 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-semibold text-gray-800 mb-2">Mixed Bloom Basket</h3>
                         <p class="text-gray-600 mb-4">A vibrant mix of seasonal flowers</p>
